[backend/frontend] Fix import